tests/compile-fail/integration__integration__enums__undefined_enum__compile_undefined_in_dot_syntax.snap
---
source: tests/integration/enums.rs
expression: stderr
---
error: no such enum 'NotAnEnum'
   ┌─ <input>:29:18
   │
29 │             I0 = NotAnEnum.Test;
   │                  ^^^^^^^^^ no such enum


